@@ -1,12 +1,0 @@
-distcc is a program to distribute compilation of C or C++ code across
-several machines on a network. distcc should always generate the same
-results as a local compile, is simple to install and use, and is often
-two or more times faster than a local compile.
-
-distcc does not require all machines to share a filesystem, have
-synchronized clocks, or to have the same libraries or header files
-installed. Machines can be running different operating systems, as long
-as they have compatible binary formats or cross-compilers.
-
-This package provides a graphical monitor for distcc, much like
-distccmon-text but for Gnome.
